--- a/YT_LangChain_Running_HuggingFace_Models_Locally.ipynb
+++ b/YT_LangChain_Running_HuggingFace_Models_Locally.ipynb
@@ -33,7 +33,7 @@
         "import os\n",
         "\n",
         "\n",
-        "os.environ['HUGGINGFACEHUB_API_TOKEN'] = ''"
+        "# os.environ['HUGGINGFACEHUB_API_TOKEN'] = ''"
       ]
     },
     {
