--- a/chatbot/test.ipynb
+++ b/chatbot/test.ipynb
@@ -99,28 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-22 08:29:51.531 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-02-22 08:29:51.532 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-02-22 08:29:51.534 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-02-22 08:29:51.535 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-02-22 08:29:51.536 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-02-22 08:29:51.538 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-02-22 08:29:51.540 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-02-22 08:29:51.541 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HUGGINGFACE_API_KEY :  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\n"
+      "2025-02-23 11:59:45.138 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-23 11:59:45.519 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run c:\\Users\\kosha\\anaconda3\\envs\\llm\\Lib\\site-packages\\ipykernel_launcher.py [ARGUMENTS]\n",
+      "2025-02-23 11:59:45.519 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-23 11:59:45.522 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-23 11:59:45.523 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-23 11:59:45.524 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-23 11:59:45.525 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-23 11:59:45.526 Session state does not function when running a script without `streamlit run`\n",
+      "2025-02-23 11:59:45.527 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-23 11:59:45.528 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     }
    ],
@@ -136,7 +135,6 @@
     "\n",
     "# Set API key for Hugging Face\n",
     "HUGGINGFACE_API_KEY = os.getenv(\"HUGGINGFACEHUB_API_TOKEN\")\n",
-    "print(\"HUGGINGFACE_API_KEY : \", HUGGINGFACE_API_KEY)\n",
     "\n",
     "# Check API Key\n",
     "if not HUGGINGFACE_API_KEY:\n",
