Added code for agent

--- a/chain/retriever.ipynb
+++ b/chain/retriever.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        " Document(metadata={'source': 'attention.pdf', 'page': 4, 'page_label': '5'}, page_content='dff = 2048.\\n3.4 Embeddings and Softmax\\nSimilarly to other sequence transduction models, we use learned embeddings to convert the input\\ntokens and output tokens to vectors of dimension dmodel. We also use the usual learned linear transfor-\\nmation and softmax function to convert the decoder output to predicted next-token probabilities. In\\nour model, we share the same weight matrix between the two embedding layers and the pre-softmax\\nlinear transformation, similar to [30]. In the embedding layers, we multiply those weights by √dmodel.\\n5')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        " Document(metadata={'source': 'attention.pdf', 'page': 0, 'page_label': '1'}, page_content='the effort to evaluate this idea. Ashish, with Illia, designed and implemented the first Transformer models and\\nhas been crucially involved in every aspect of this work. Noam proposed scaled dot-product attention, multi-head\\nattention and the parameter-free position representation and became the other person involved in nearly every\\ndetail. Niki designed, implemented, tuned and evaluated countless model variants in our original codebase and\\ntensor2tensor. Llion also experimented with novel model variants, was responsible for our initial codebase, and\\nefficient inference and visualizations. Lukasz and Aidan spent countless long days designing various parts of and\\nimplementing tensor2tensor, replacing our earlier codebase, greatly improving results and massively accelerating\\nour research.\\n†Work performed while at Google Brain.\\n‡Work performed while at Google Research.\\n31st Conference on Neural Information Processing Systems (NIPS 2017), Long Beach, CA, USA.')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,43 +111,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kosha\\AppData\\Local\\Temp\\ipykernel_38644\\1961750750.py:6: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
-      "  db = FAISS.from_documents(documents,HuggingFaceEmbeddings())\n",
-      "C:\\Users\\kosha\\AppData\\Local\\Temp\\ipykernel_38644\\1961750750.py:6: LangChainDeprecationWarning: Default values for HuggingFaceEmbeddings.model_name were deprecated in LangChain 0.2.16 and will be removed in 0.4.0. Explicitly pass a model_name to the HuggingFaceEmbeddings constructor instead.\n",
-      "  db = FAISS.from_documents(documents,HuggingFaceEmbeddings())\n",
-      "c:\\Users\\kosha\\anaconda3\\envs\\llm\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from langchain_community.embeddings import OpenAIEmbeddings\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
-    "# from langchain_community.embeddings import OllamaEmbeddings\n",
+    "from langchain_ollama import OllamaEmbeddings\n",
+    "# from langchain_google_vertexai import VertexAIEmbeddings\n",
+    "\n",
+    "# embeddings = VertexAIEmbeddings(model=\"text-embedding-004\")\n",
+    "\n",
+    "embeddings = OllamaEmbeddings(model=\"llama3.2\")\n",
+    "\n",
     "from langchain_community.vectorstores import FAISS\n",
     "\n",
-    "db = FAISS.from_documents(documents,HuggingFaceEmbeddings())"
+    "db = FAISS.from_documents(documents,embeddings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langchain_community.vectorstores.faiss.FAISS at 0x2a973b9ac10>"
+       "<langchain_community.vectorstores.faiss.FAISS at 0x24b6c1f3fd0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Scaled Dot-Product Attention\\n Multi-Head Attention\\nFigure 2: (left) Scaled Dot-Product Attention. (right) Multi-Head Attention consists of several\\nattention layers running in parallel.\\nof the values, where the weight assigned to each value is computed by a compatibility function of the\\nquery with the corresponding key.\\n3.2.1 Scaled Dot-Product Attention\\nWe call our particular attention \"Scaled Dot-Product Attention\" (Figure 2). The input consists of\\nqueries and keys of dimension dk, and values of dimension dv. We compute the dot products of the\\nquery with all keys, divide each by √dk, and apply a softmax function to obtain the weights on the\\nvalues.\\nIn practice, we compute the attention function on a set of queries simultaneously, packed together\\ninto a matrix Q. The keys and values are also packed together into matrices K and V . We compute\\nthe matrix of outputs as:\\nAttention(Q, K, V) = softmax(QKT\\n√dk\\n)V (1)'"
+       "'the matrix of outputs as:\\nAttention(Q, K, V) = softmax(QKT\\n√dk\\n)V (1)\\nThe two most commonly used attention functions are additive attention [2], and dot-product (multi-\\nplicative) attention. Dot-product attention is identical to our algorithm, except for the scaling factor\\nof 1√dk\\n. Additive attention computes the compatibility function using a feed-forward network with\\na single hidden layer. While the two are similar in theoretical complexity, dot-product attention is\\nmuch faster and more space-efficient in practice, since it can be implemented using highly optimized\\nmatrix multiplication code.\\nWhile for small values of dk the two mechanisms perform similarly, additive attention outperforms\\ndot product attention without scaling for larger values of dk [3]. We suspect that for large values of\\ndk, the dot products grow large in magnitude, pushing the softmax function into regions where it has\\nextremely small gradients 4. To counteract this effect, we scale the dot products by 1√dk\\n.'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ollama(model='llama3.2')"
+       "Ollama(model='llama3')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,13 +190,13 @@
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
-    "llm = Ollama(model=\"llama3.2\")\n",
+    "llm = Ollama(model=\"llama3\")\n",
     "llm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000002A973B9AC10>, search_kwargs={})"
+       "VectorStoreRetriever(tags=['FAISS', 'OllamaEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x0000024B6C1F3FD0>, search_kwargs={})"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,16 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To answer your question about Scaled Dot-Product Attention step by step:\\n\\n1. According to the context provided, Scaled Dot-Product Attention is a type of attention mechanism used in the Transformer model.\\n\\n2. The key components involved in this attention mechanism are queries (Q), keys (K), and values (V). These inputs are dimensionally divided into Q with dimensions dk, K with dimensions dk, and V with dimensions dv.\\n\\n3. In Scaled Dot-Product Attention, the input matrix of outputs is computed as: Attention(Q, K, V) = softmax(QKT √dk )V (1), where T represents a compatibility function that computes the weights based on the query with corresponding key. \\n\\n4. The scaling factor of 1/√dk is used to counteract extreme small gradients problem in the dot product operation.\\n\\n5. Additionally, Scaled Dot-Product Attention can be applied in parallel by performing the attention mechanism h times using different linear projections, which results in Multi-Head Attention output values. These are concatenated and then projected again resulting in final output values.\\n\\n6. In practice, when we apply Scaled Dot-Product Attention on a set of queries simultaneously (packed into a matrix Q), and keys and values packed together into matrices K and V respectively.\\n\\n7. The dot products in the attention mechanism have been shown to grow large as the dimensionality of the input increases (dk). This problem can be addressed by scaling the dot product with 1/√dk to reduce extreme gradients.\\n\\n8. Furthermore, Scaled Dot-Product Attention is compared to Additive Attention, which uses a feed-forward network to compute compatibility function, whereas dot-product attention scales the dot products by 1/√dk . It has been noted that while they are theoretically similar in complexity, dot product attention performs better for larger values of dk.'"
+       "\"I'm happy to help you with that!\\n\\nBased on the provided context, I understand that you're asking about Scaled Dot-Product Attention. Specifically, you want to know how information flows in the decoder to preserve the auto-regressive property.\\n\\nAccording to the text, the answer lies in masking out (setting to -∞) all values in the input of the softmax which correspond to illegal connections inside the scaled dot-product attention mechanism. This ensures that the model only considers valid connections and maintains its auto-regressive property.\\n\\nSo, to summarize: the information flow in the decoder is controlled by masking out invalid connections in the scaled dot-product attention, which preserves the auto-regressive property.\\n\\nI hope this helps!\""
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
